--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,17 @@
     "require": {
         "yiisoft/yii2-bootstrap": "*",
         "rmrevin/yii2-fontawesome": ">=2.10.0",
-        "bower-asset/startbootstrap-sb-admin-2": ">=1.0.4"
+        "bower-asset/metisMenu": "1.1.3"
     },
     "autoload": {
         "psr-4": {
             "nullref\\sbadmin\\": "src/"
         }
+    },
+    "extra": {
+        "asset-vcs-driver-options": {
+          "github-no-api": true
+        },
+        "asset-pattern-skip-version": "(-build|-patch)"
     }
 }
