--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
         }
     ],
     "require": {
-        "yiisoft/yii2-bootstrap": "*",
-        "rmrevin/yii2-fontawesome": ">=2.16.0",
+        "yiisoft/yii2-bootstrap": "~2.0.0",
+        "rmrevin/yii2-fontawesome": "^2.16",
         "bower-asset/metisMenu": "1.1.3"
     },
     "autoload": {
@@ -21,10 +21,12 @@
             "nullref\\sbadmin\\": "src/"
         }
     },
-    "extra": {
-        "asset-vcs-driver-options": {
-          "github-no-api": true
-        },
-        "asset-pattern-skip-version": "(-build|-patch)"
+    "config": {
+        "fxp-asset": {
+            "vcs-driver-options": {
+                "github-no-api": true
+            },
+            "pattern-skip-version": "(-build|-patch)"
+        }
     }
 }
